Fix html validation for fan-zone.html

--- a/project7/fan-zone.html
+++ b/project7/fan-zone.html
@@ -56,7 +56,7 @@
       <section>
         <h2>Fan Poll</h2>
         <p>What is your favorite Bills moment of the season?</p>
-        <form action="" method="post">
+        <form method="post">
           <label for="moment">Your Moment:</label>
           <input type="text" id="moment" name="moment" required />
           <input type="submit" value="Submit" />
@@ -65,7 +65,7 @@
       <section>
         <h2>Game Predictions</h2>
         <p>Make your predictions for the next game!</p>
-        <form action="" method="post">
+        <form method="post">
           <label for="prediction">Your Prediction:</label>
           <input type="text" id="prediction" name="prediction" required />
           <input type="submit" value="Submit" />
@@ -74,7 +74,7 @@
       <section>
         <h2>Fan Stories</h2>
         <p>Share your favorite Bills stories with us!</p>
-        <form action="" method="post">
+        <form method="post">
           <label for="story">Your Story:</label>
           <textarea id="story" name="story" required></textarea>
           <input type="submit" value="Submit" />
