Add MVP tribute section. Edit fan stories section. Add comment section.

--- a/project7/fan-zone.html
+++ b/project7/fan-zone.html
@@ -49,35 +49,55 @@
         loading="lazy"
       />
       <p>
-        Welcome to the ultimate fan hub for all things Buffalo Bills! Here, you
-        can share your favorite moments, make game predictions, and discuss the
-        latest team news with fellow Bills Mafia members.
+        Welcome to the ultimate fan hub for all things Buffalo Bills! This is
+        the place where the <strong>Bills Mafia</strong> connects, shares
+        memories, and celebrates every touchdown together. Whether you're a
+        die-hard from Buffalo or a long-distance fan, your voice matters here!
       </p>
-      <section>
-        <h2>Fan Poll</h2>
-        <p>What is your favorite Bills moment of the season?</p>
-        <form method="post">
-          <label for="moment">Your Moment:</label>
-          <input type="text" id="moment" name="moment" required />
-          <input type="submit" value="Submit" />
-        </form>
+
+      <section class="mvp-section">
+        <h2>🏆 2024 NFL MVP: Josh Allen</h2>
+        <p>
+          Congratulations to Josh Allen for winning the 2024 NFL Most Valuable
+          Player award! 🐃🔥
+        </p>
+        <div class="mvp-tribute">
+          <img src="../project/media/josh-allen.jpg" alt="Josh Allen MVP" />
+          <p>
+            Josh Allen has led the Buffalo Bills to a remarkable season. His
+            hard work, leadership, and incredible performance on the field have
+            earned him the MVP title. Let's show our respect for the MVP!
+          </p>
+          <button onclick="alert('Respect paid to MVP Josh Allen!')">
+            Pay Respects to Josh Allen
+          </button>
+        </div>
       </section>
-      <section>
-        <h2>Game Predictions</h2>
-        <p>Make your predictions for the next game!</p>
-        <form method="post">
-          <label for="prediction">Your Prediction:</label>
-          <input type="text" id="prediction" name="prediction" required />
-          <input type="submit" value="Submit" />
-        </form>
-      </section>
+
       <section>
         <h2>Fan Stories</h2>
-        <p>Share your favorite Bills stories with us!</p>
+        <p>
+          Share your favorite Buffalo Bills stories—whether it’s a tailgate,
+          game day tradition, or your first game in person! 🏈<br />
+          <strong>Selected fan stories may be featured on our site!</strong>
+        </p>
         <form method="post">
           <label for="story">Your Story:</label>
-          <textarea id="story" name="story" required></textarea>
-          <input type="submit" value="Submit" />
+          <textarea id="story" name="story" rows="5" required></textarea>
+          <input type="submit" value="Submit Story" />
+        </form>
+      </section>
+
+      <section>
+        <h2>Bills Mafia Comment Section</h2>
+        <p>
+          Share your thoughts on the team’s performance, upcoming matchups, and
+          our path to the Super Bowl!
+        </p>
+        <form method="post">
+          <label for="comment">Your Comment:</label>
+          <textarea id="comment" name="comment" rows="4" required></textarea>
+          <input type="submit" value="Post Comment" />
         </form>
       </section>
     </main>
