Add timer icon.

--- a/project7/index.html
+++ b/project7/index.html
@@ -76,7 +76,14 @@
 
       <section>
         <h2>Countdown to Next Game:</h2>
-        <p id="countdown">Loading...</p>
+        <div class="countdown-container">
+          <img
+            src="../project/media/timer.png"
+            alt="Timer Icon"
+            class="timer-icon"
+          />
+          <span id="countdown">Loading...</span>
+        </div>
       </section>
 
       <section>
@@ -87,8 +94,8 @@
         >
           <img
             src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_12_desktop_2x/f_auto/bills/odo6zua0iw1y654rsb5q.jpg"
-            alt="Buffalo Bills 2024 Schedule Release"
-            style="max-width: 800px; height: auto; border-radius: 10px"
+            alt="Buffalo Bills 2025 Schedule Release"
+            class="schedule-image"
           />
         </a>
       </section>
@@ -103,7 +110,7 @@
             <a href="https://www.buffalobills.com/team/stats/" target="_blank">
               <img
                 src="https://www.buffalobills.com/assets/images/2021/7/team-stats.jpg"
-                alt="Player Stats"
+                alt="Buffalo Bills Team Stats"
                 style="width: 100%; max-width: 600px; border-radius: 10px"
               />
             </a>
@@ -118,7 +125,7 @@
             >
               <img
                 src="https://www.buffalobills.com/assets/images/2021/7/player-interviews.jpg"
-                alt="Player Interviews"
+                alt="Buffalo Bills Player Interviews"
                 style="width: 100%; max-width: 600px; border-radius: 10px"
               />
             </a>
