Add team stats table. Remove player interviews section. Add styling.

--- a/project7/index.html
+++ b/project7/index.html
@@ -101,35 +101,60 @@
       </section>
 
       <section>
-        <h2>Latest News</h2>
-        <div class="latest-news">
-          <article>
-            <h3>Player Stats</h3>
-            <p>Get the latest stats on your favorite players!</p>
-            <!-- Image linking to the Player Stats page -->
-            <a href="https://www.buffalobills.com/team/stats/" target="_blank">
-              <img
-                src="https://www.buffalobills.com/assets/images/2021/7/team-stats.jpg"
-                alt="Buffalo Bills Team Stats"
-                style="width: 100%; max-width: 600px; border-radius: 10px"
-              />
-            </a>
-          </article>
-          <article>
-            <h3>Player Interviews</h3>
-            <p>Exclusive interviews with your favorite players!</p>
-            <!-- Image linking to the Player Interviews page -->
+        <h2>2024 Team Stats</h2>
+        <div class="latest-stats">
+          <p>Get the latest stats on your favorite players!</p>
+          <table class="player-stats-table">
+            <thead>
+              <tr>
+                <th>Player</th>
+                <th>Position</th>
+                <th>TDs</th>
+                <th>Yards</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Josh Allen</td>
+                <td>QB</td>
+                <td>28</td>
+                <td>3,731</td>
+              </tr>
+              <tr>
+                <td>James Cook</td>
+                <td>RB</td>
+                <td>16</td>
+                <td>1,009</td>
+              </tr>
+              <tr>
+                <td>Khalil Shakir</td>
+                <td>WR</td>
+                <td>4</td>
+                <td>821</td>
+              </tr>
+              <tr>
+                <td>Keon Coleman</td>
+                <td>WR</td>
+                <td>4</td>
+                <td>556</td>
+              </tr>
+              <tr>
+                <td>Dalton Kincaid</td>
+                <td>TE</td>
+                <td>2</td>
+                <td>448</td>
+              </tr>
+            </tbody>
+          </table>
+          <p>
             <a
-              href="https://www.buffalobills.com/video/press-conferences"
+              href="https://www.buffalobills.com/team/stats/2024/REG"
               target="_blank"
+              class="full-stats-link"
             >
-              <img
-                src="https://www.buffalobills.com/assets/images/2021/7/player-interviews.jpg"
-                alt="Buffalo Bills Player Interviews"
-                style="width: 100%; max-width: 600px; border-radius: 10px"
-              />
+              View Full Stats
             </a>
-          </article>
+          </p>
         </div>
       </section>
 
