--- a/project7/fan-zone.html
+++ b/project7/fan-zone.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fan Zone</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script>
       function showNav() {
         document.getElementById("navlinks").style.display = "block";
